--- a/Exercice-05-Sublime/style.css
+++ b/Exercice-05-Sublime/style.css
@@ -1,6 +1,10 @@
 body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 0;  
+    margin: 0; 
+    display: flex;
+    flex-direction: column;
+    text-align: center; 
+    color: black;
 }
 nav{
     max-width: 400px;
@@ -24,7 +28,7 @@ nav{
 }
 header{
     background: url("./img/billboard.jpg");
-    height: 100vh;
+    height: 98vh;
 }
 header::after{
     position: absolute;
@@ -40,12 +44,13 @@ h1{
     color: white;
     background-color: none;
     font-size: 80px;
-    padding-top: 300px; 
+    padding-top: 50px; 
 }
 h2{
     text-align: center;
     color: white;
-    background-color: none; 
+
+    
 }
 hr{
     width: 15px;
@@ -54,8 +59,52 @@ hr{
     background-color:white;
 }
 .icons{
-    background-color: white;
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    width: 60vw;
+    height: 40vh;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;  
+}
+.icon{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h3,h4,h5{
+    display: flex;
+    font-size: 25px;
+
+}
+
+.video{
+   height: 30vh;
+   background-image: url('./img/video.jpg');
+   background-size: cover;
+   text-align: center;
+  
+}
+.video p{
+   color: white;
+}
+.client{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    color:black;
+    padding: 0;
+    
+}
+.client h1, h2{
+    
+    color:black;
+}
+.opinions{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
 }
